Finished layout w/ Completed Nav/Footer

--- a/index.html
+++ b/index.html
@@ -6,9 +6,80 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Colmar Academy</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
-    <link href="./resources/css/styles.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- Navigation -->
+    <nav>
+    <div class="container">
+        <div class="logo">
+            <img src="./resources/images/ic-logo.svg" alt="logo">
+            <p>
+                <span>Colmar</span>Academy
+            </p>
+        </div>
+        <ul class="desktop-nav">
+            <li><a href="#">On Campus</a></li>
+            <li><a href="#">Online</a></li>
+            <li><a href="#">Our Companies</a></li>
+            <li><a href="#">Sign In</a></li>
+        </ul>
+        <ul class="mobile-nav">
+            <li><a href="#"><img src="./resources/images/ic-logo.svg" alt="logo"></a></li>
+            <li><a href="#"><img src="./resources/images/ic-online.svg" alt="online"></a></li>
+            <li><a href="#"><img src="./resources/images/ic-on-campus.svg" alt="companies"></a></li>
+            <li><a href="#"><img src="./resources/images/ic-login.svg" alt="sign in"></a></li>
+       </ul>
+        
+
+    </div>
+    </nav>
+    <!-- Banner -->
+    <div class="banner">
+        <div class="container">
+            <img src="./resources/images/banner.jpg" alt="banner image">
+        </div>
+
+    </div>
+    <!-- Main Content -->
+    <div class="main">
+        <div class="container">
+        <img src="./resources/images/information-main.jpg" alt="main image">
+        <h2>It doesn't hurt to keep practicing</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Nam nec turpis dolor. Cras eleifend enim nec metus ultrices 
+            volutpat. Cras nisl nulla, ultrices faucibus cursus cursus,
+            hendrerit sed ipsum. Etiam accumsan augue eu congue luctus.
+            Praesent tortor neque, placerat ac pellentesque ut, facilisis
+            et tortor. Nulla congue dictum ligula, nec interdum mauris. 
+            Fusce porta ipsum at molestie ultrices. Donec accumsan nulla 
+            vitae maximus malesuada.
+        </p>
+        <p class="auth">Emmanuel, Sr Strategist at Indeed.com</p>
+        </div>        
+    </div>
+    <!-- Courses Section -->
+    <div class="courses">
+        <div class="container">
+        <h2>Start Learning</h2>
+        </div>
+    </div>
+    <!-- Thesis Section -->
+    <div class="thesis">
+        <div class="container">
+        <h2>Thesis exhibit</h2>
+        </div>
+    </div>
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+        <div class="copy">&copy 2017 Colmar Academy. All Rights Reserved</div>
+        <span>
+            <a class="foot-link" href="#">Terms</a>
+            <a class="foot-link" href="#">Privacy</a>
+        </span>
+    </div>
+    </footer>
+
 </body>
 </html>
