--- a/index.html
+++ b/index.html
@@ -34,10 +34,19 @@
 
     </div>
     </nav>
+    <div class="space">
+
+    </div>
     <!-- Banner -->
     <div class="banner">
         <div class="container">
             <img src="./resources/images/banner.jpg" alt="banner image">
+            <div class="learn">
+            <h2>Learn Something New Everyday</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+               Nam nec turpis dolor. 
+            </p>   
+              <button>Start Here</button>
         </div>
 
     </div>
