--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     </div>
     <!-- Banner -->
-    <div class="banner">
-        <div class="container">
+    <div class="container">
+        <div class="banner">
             <img src="./resources/images/banner.jpg" alt="banner image">
             <div class="learn">
             <h2>Learn Something New Everyday</h2>
@@ -51,22 +51,56 @@
 
     </div>
     <!-- Main Content -->
-    <div class="main">
-        <div class="container">
-        <img src="./resources/images/information-main.jpg" alt="main image">
-        <h2>It doesn't hurt to keep practicing</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Nam nec turpis dolor. Cras eleifend enim nec metus ultrices 
-            volutpat. Cras nisl nulla, ultrices faucibus cursus cursus,
-            hendrerit sed ipsum. Etiam accumsan augue eu congue luctus.
-            Praesent tortor neque, placerat ac pellentesque ut, facilisis
-            et tortor. Nulla congue dictum ligula, nec interdum mauris. 
-            Fusce porta ipsum at molestie ultrices. Donec accumsan nulla 
-            vitae maximus malesuada.
-        </p>
-        <p class="auth">Emmanuel, Sr Strategist at Indeed.com</p>
-        </div>        
-    </div>
+    <section id="articles">
+            <div class="container">
+              <div class="featured">
+                  <img src="resources/images/information-main.jpg" alt="">
+                  <div class="featured-copy">
+                    <h3>It doesn't hurt to keep practicing</h3>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+                    <p class="auth">Emmanuel, Sr Strategist at Indeed.com</p>
+                  </div>
+                
+              </div>
+              <div class="article-list">
+                <div class="article-block">
+                  <a class="transition" href="#">
+                    <img src="resources/images/information-orientation.jpg" class="desktop-article-img" alt="orientation">
+                    <img src="resources/images/information-orientation-mobile.jpg" class="mobile-article-img" alt="orientation">
+                    <div class="article-copy">
+                      <h4>Orientation date</h4>
+                      <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+                      <div class="read-more transition">Read more</div>
+                    </div>
+                  </a>
+                </div>
+                <div class="article-block">
+                  <a class="transition" href="#">
+                    <img src="resources/images/information-campus.jpg" class="desktop-article-img" alt="campus">
+                    <img src="resources/images/information-campus-mobile.jpg" class="mobile-article-img" alt="campus">
+                    <div class="article-copy">
+                      <h4>Our campus</h4>
+                      <p>Find which campus is close by you</p>
+                      <div class="read-more transition">Read more</div>
+                    </div>
+                  </a>
+                </div>
+                <div class="article-block">
+                  <a class="transition" href="#">
+                    <img src="resources/images/information-guest-lecture.jpg" class="desktop-article-img" alt="guest">
+                    <img src="resources/images/information-guest-lecture-mobile.jpg" class="mobile-article-img" alt="guest">
+                    <div class="article-copy">
+                      <h4>Our guest lecture</h4>
+                      <p>Join with Oliver Sack about music in medical treatment</p>
+                      <div class="read-more transition">Read more</div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </section>
     <!-- Courses Section -->
     <div class="courses">
         <div class="container">
