--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Colmar Academy</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link rel="shortcut icon" href="./resources/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <!-- Navigation -->
